sign up functionality

--- a/signup.html
+++ b/signup.html
@@ -48,31 +48,31 @@
       <section class="hero-body column is-one-third-desktop is-offset-4-desktop">
 
         <!-- start of form template -->
-        <form id="form" class="form box">
+        <form id="form" class="form box signupForm">
           <span class="columns">
             <label class="label column is-half" for="first_name">First Name:
-              <input class="input" id="first_name" type="text" placeholder="First Name" required validate>
+              <input class="input fname_signup" id="first_name" type="text" placeholder="First Name" required validate>
             </label>
             <label class="label column is-half" for="last_name">Last Name:
-              <input class="input" id="last_name" type="text" placeholder="Last Name" required validate>
+              <input class="input lname_signup" id="last_name" type="text" placeholder="Last Name" required validate>
             </label>
           </span>
 
           <span class="columns">
             <label class="label column is-full" for="company">Company/Organization:
-              <input class="input" id="company" type="text" placeholder="Acme Inc." validate>
+              <input class="input company_signup" id="company" type="text" placeholder="Acme Inc." validate>
             </label>
           </span>
 
           <span class="columns">
             <label class="label column is-full" for="email">Email:
-              <input class="input" id="email" type="email" placeholder="email@address.com" required validate>
+              <input class="input email_signup" id="email" type="email" placeholder="email@address.com" required validate>
             </label>
           </span>
 
           <span class="columns">
             <label class="label column is-full" for="passowrd">Password:
-              <input class="input" id="password" type="password" placeholder="******" required>
+              <input class="input password_signup" id="password" type="password" placeholder="******" required>
             </label>
           </span>
           <span class="column has-text-centered">
