display invoice information & devide paid and outstanding invoices for received invoices page

--- a/received.html
+++ b/received.html
@@ -23,34 +23,12 @@
 
         <h3 class="title is-3 has-text-danger">Outstanding</h3>
         <hr>
-        <ul class="outstanding invoice-list">
-
-          <!-- start of table template -->
-          
-          <!-- end of table template -->
+        <ul class="outstanding-invoice-list">
         </ul>
 
         <h3 class="title is-3 has-text-primary">Paid</h3>
         <hr>
-        <ul class="paid invoice-list">
-
-          <!-- start of table template -->
-          <li class="columns">
-            <div class="column">
-              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> #${ invoice_number }
-            </div>
-            <div class="column is-two-fifths-desktop">
-              <span class="mdi mdi-account mdi-24px has-text-grey-light"></span> ${ first_name } ${ last_name }
-            </div>
-            <div class="column">
-              <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
-            </div>
-            <span class="column">
-              <a href="./invoice.html" class="button is-link">View Details</a>
-            </span>
-          </li>
-          <!-- end of table template -->
-
+        <ul class="paid-invoice-list">
         </ul>
 
 
