--- a/received.html
+++ b/received.html
@@ -26,8 +26,9 @@
         <ul class="outstanding invoice-list">
 
           <!-- start of table template -->
-          
+
           <!-- end of table template -->
+
         </ul>
 
         <h3 class="title is-3 has-text-primary">Paid</h3>
@@ -46,7 +47,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="./invoice.html" class="button is-link">View Details</a>
+              <a href="./preview.html" class="button is-link">View Details</a>
             </span>
           </li>
           <!-- end of table template -->
