--- a/generate.html
+++ b/generate.html
@@ -29,39 +29,20 @@
 
       <h3 class="title is-4 has-text-primary">Billing Details</h3>
       <div class="columns">
-        <div class="column">
-          <div class="field"> Company:
-            <label class="control" for="company">
-              <input id="company" class="input" type="text" placeholder="Company/Organization" validate value="AAA">
-            </label>
-          </div>
-          <div class="field"> First Name:
-            <label class="control" for="first_name">
-              <input id="first_name" class="input" type="text" placeholder="First Name" validate required value="AAA">
-            </label>
-          </div>
-          <div class="field"> Last Name:
-            <label class="control" for="last_name">
-              <input id="last_name" class="input" type="text" placeholder="Last Name" validate required value="AAA">
-            </label>
-          </div>
+        <div class="field column">
+          <label class="control" for="invoiceNumber"> Invoice Number:
+            <input id="invoiceNumber" class="input" type="number" placeholder="Invoice Number" validate>
+          </label>
         </div>
-        <div class="column">
-          <div class="field">
-            <label class="control" for="invoiceNumber"> Invoice Number:
-              <input id="invoiceNumber" class="input" type="number" placeholder="Invoice Number" validate value="111">
-            </label>
-          </div>
-          <div class="field">
-            <label class="control" for="email"> Email:
-              <input id="email" class="input" type="email" placeholder="email@address.com" validate required value="test@me.com">
-            </label>
-          </div>
-          <div class="field">
-            <label class="control" for="dueDate"> Due Date:
-              <input id="dueDate" class="input" type="date" validate required value="2001-01-01">
-            </label>
-          </div>
+        <div class="field column">
+          <label class="control" for="email"> Email:
+            <input id="email" class="input" type="email" placeholder="email@address.com" validate required">
+          </label>
+        </div>
+        <div class="field column">
+          <label class="control" for="dueDate"> Due Date:
+            <input id="dueDate" class="input" type="date" validate required min="2018-12-06">
+          </label>
         </div>
       </div>
       <hr>
@@ -96,12 +77,12 @@
             </td>
             <td>
               <div class="field">
-                <input class="qty input" type="number" placeholder="1" required value="1">
+                <input class="qty input" type="number" placeholder="1" required>
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate input" type="number" placeholder="45" required value="70">
+                <input class="rate input" type="number" placeholder="45" required>
               </div>
             </td>
             <td>${ subtotal }</td>
@@ -116,10 +97,12 @@
       <span class="invoice-footer">
         <div class="notes">
           <h3 class="title is-5 has-text-primary">Notes</h3>
-          <textarea id="notes" class="textarea" placeholder="example: Please pay within 30 days or 90 days or whatever you want to say">This is a test.</textarea>
+          <textarea id="notes" class="textarea" placeholder="example: Please pay within 30 days or 90 days or whatever you want to say"></textarea>
         </div>
 
-        <button href="./manage.html" class="button submit send is-primary is-medium">Save</button>
+        <button href="./manage.html" class="button submit send is-primary is-medium">
+          Create &amp; Send
+        </button>
     </form>
     </span>
   </section>
