--- a/generate.html
+++ b/generate.html
@@ -54,7 +54,6 @@
             <th><span class="has-text-primary">Qty</span></th>
             <th><span class="has-text-primary">Rate</span></th>
             <th><span class="has-text-primary">Totals</span></th>
-            <th><span class="has-text-primary">Add</span></th>
           </tr>
         </thead>
         <tfoot>
@@ -86,87 +85,75 @@
               </div>
             </td>
             <td class='subtotal1'></td>
-            <td>
-              <div class="line-item button mdi mdi-plus"></div>
-            </td>
           </tr>
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty2 input" type="number" placeholder="1" required>
+                <input class="qty qty2 input" type="number" placeholder="1">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate2 input" type="number" placeholder="45" required>
+                <input class="rate rate2 input" type="number" placeholder="45">
               </div>
             </td>
             <td class='subtotal2'></td>
-            <td>
-              <div class="line-item button mdi mdi-plus"></div>
-            </td>
           </tr>
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty3 input" type="number" placeholder="1" required>
+                <input class="qty qty3 input" type="number" placeholder="1">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate3 input" type="number" placeholder="45" required>
+                <input class="rate rate3 input" type="number" placeholder="45">
               </div>
             </td>
             <td class='subtotal3'></td>
-            <td>
-              <div class="line-item button mdi mdi-plus"></div>
-            </td>
           </tr>
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty4 input" type="number" placeholder="1" required>
+                <input class="qty qty4 input" type="number" placeholder="1">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate4 input" type="number" placeholder="45" required>
+                <input class="rate rate4 input" type="number" placeholder="45">
               </div>
             </td>
             <td class='subtotal4'></td>
-            <td>
-              <div class="line-item button mdi mdi-plus"></div>
-            </td>
           </tr>
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty5 input" type="number" placeholder="1" required>
+                <input class="qty qty5 input" type="number" placeholder="1">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate5 input" type="number" placeholder="45" required>
+                <input class="rate rate5 input" type="number" placeholder="45">
               </div>
             </td>
             <td class='subtotal5'></td>
