Vendor Preview is Working - Also did some layout adjustment to manage and review page templates for the buttons

--- a/vendor-preview.html
+++ b/vendor-preview.html
@@ -8,7 +8,7 @@
     <script defer src="bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.8.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Received Invoices</title>
+    <title>Preview Invoice</title>
   </head>
 
   <body class="is-mobile">
@@ -18,21 +18,12 @@
     </header>
 
     <section class="container">
-      <h1 class="title is-1 has-text-white">Received Invoices</h1>
-      <div class="section manage box">
-
-        <h3 class="title is-3 has-text-danger">Outstanding</h3>
-        <hr>
-        <ul class="outstanding invoice-list">
-        </ul>
-
-        <h3 class="title is-3 has-text-primary">Paid</h3>
-        <hr>
-        <ul class="paid invoice-list">
-        </ul>
-
-
+      <div class="column is-two-thirds-desktop is-offset-2-desktop">
+        <h1 class="title is-1 has-text-white">Preview</h1>
       </div>
+    </section>
+    <section class="preview container">
+      <!-- insert preview here -->
     </section>
     <footer class="has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
   </body>
