--- a/generate.html
+++ b/generate.html
@@ -93,17 +93,17 @@
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty2 input" type="number" placeholder="1" required>
+                <input class="qty qty2 input" type="number" placeholder="1" validate>
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate2 input" type="number" placeholder="45" required>
+                <input class="rate rate2 input" type="number" placeholder="45" validate>
               </div>
             </td>
             <td class='subtotal2'></td>
@@ -114,17 +114,17 @@
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty3 input" type="number" placeholder="1" required>
+                <input class="qty qty3 input" type="number" placeholder="1" validate>
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate3 input" type="number" placeholder="45" required>
+                <input class="rate rate3 input" type="number" placeholder="45" validate>
               </div>
             </td>
             <td class='subtotal3'></td>
@@ -135,17 +135,17 @@
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty4 input" type="number" placeholder="1" required>
+                <input class="qty qty4 input" type="number" placeholder="1" validate>
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate4 input" type="number" placeholder="45" required>
+                <input class="rate rate4 input" type="number" placeholder="45" validate>
               </div>
             </td>
             <td class='subtotal4'></td>
@@ -156,17 +156,17 @@
           <tr class="line-item">
             <td>
               <div class="field">
-                <input class="desc input" type="text" placeholder="example: Custom Login Page" required>
+                <input class="desc input" type="text" placeholder="example: Custom Login Page">
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="qty qty5 input" type="number" placeholder="1" required>
+                <input class="qty qty5 input" type="number" placeholder="1" validate>
               </div>
             </td>
             <td>
               <div class="field">
-                <input class="rate rate5 input" type="number" placeholder="45" required>
+                <input class="rate rate5 input" type="number" placeholder="45" validate>
               </div>
             </td>
             <td class='subtotal5'></td>
@@ -180,7 +180,7 @@
           <h3 class="title is-5 has-text-primary">Notes</h3>
           <textarea id="notes" class="textarea" placeholder="example: Please pay within 30 days or 90 days or whatever you want to say"></textarea>
         </div>
-
+        <a href="./manage.html" class="button cancel is-link is-medium">Back</a>
         <button href="./manage.html" class="button submit send is-primary is-medium">
           Create &amp; Send
         </button>
