column adj for preview and create

--- a/generate.html
+++ b/generate.html
@@ -50,7 +50,7 @@
       <table class="services table is-fullwidth is-hoverable">
         <thead>
           <tr>
-            <th><span class="has-text-primary">Desc.</span></th>
+            <th><span class="has-text-primary">Description</span></th>
             <th><span class="has-text-primary">Qty</span></th>
             <th><span class="has-text-primary">Rate</span></th>
             <th><span class="has-text-primary">Totals</span></th>
@@ -63,7 +63,6 @@
             <td></td>
             <th><span class="has-text-primary">Total</span></th>
             <th><span class="total"></span></th>
-            <td></td>
           </tr>
           <!-- totals template start -->
         </tfoot>
