removed placeholder text because it looks weird on page load

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- start of form template -->
         <form id="form" class="form box">
-          <p class="notification hidden has-text-danger">Password does not match!</p>
+          <p class="notification hidden has-text-danger"></p>
           <span class="columns">
             <label class="label column is-full" for="email">Email:
               <input class="input" id="email" type="email" placeholder="email@address.com" required validate>
