--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
 
         <!-- start of form template -->
         <form id="form" class="form box signupForm">
-          <p class="notification hidden has-text-danger">Email account already in use!</p>
+          <p class="notification hidden has-text-danger"></p>
 
           <span class="columns">
             <label class="label column is-half" for="first_name">First Name:
